# CSSLoader-Desktop

./: README.md  package.json
.github/workflows/: macos-build.yml
backend/: recursiveCheck.ts
backend/tauriMethods/: checkIfStandaloneBackendExists.ts  downloadBackend.ts  startBackend.ts
backend/webFetches/: fetchNewestBackend.ts
components/: AppRoot.tsx  BackendFailedPage.tsx  DownloadBackendPage.tsx
components/Presets/: PresetSelectionDropdown.tsx
components/SingleTheme/: ThemeToggle.tsx
contexts/: osContext.ts
logic/: index.ts  resolveAndDownloadDeps.ts
pages/: _app.tsx  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
