[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
zip-extract = "0.1.2"
home = "0.5.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-all", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "http-all", "os-all", "path-all", "shell-all", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-decorations", "window-set-focus", "window-set-fullscreen", "window-set-size", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
# Tauri 1.2.4 predates RunEvent::Reopen, so we cannot intercept the macOS
# "open -a" reactivation event ourselves. We use the v1 branch of the
# tauri-plugin-single-instance plugin instead: when the backend tray's "Open
# Desktop App" entry runs ``open -n -a`` (forces a fresh process), the new
# instance hands its argv to this plugin's callback in the existing instance
# and exits, which is where we show the (potentially hidden) main window.
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
directories = "5.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
# Used by the dynamic dock visibility helper in main.rs: we ship the macOS
# .app with ``LSUIElement = true`` so a silent autostart launch never gets
# a Dock icon, then call ``-[NSApplication setActivationPolicy:]`` at
# runtime to add ourselves to the Dock when the user actually surfaces the
# main window (and remove ourselves again if they hide it back).
objc = "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
